sub/76/build.log
Main.cpp: In function 'int main()':
Main.cpp:79:5: error: 'idf' was not declared in this scope
     idf
     ^
